@@ -578,32 +578,32 @@ int Fl_Browser_::handle(int event) {
       if (type()==FL_HOLD_BROWSER) switch (Fl::event_key()) {
       case FL_Down:
 	while ((l = item_next(l)))
-	  if (item_height(l)>0) {select_only(l, 1); break;}
+	  if (item_height(l)>0) {select_only(l, when()); break;}
 	return 1;
       case FL_Up:
 	while ((l = item_prev(l))) if (item_height(l)>0) {
-	  select_only(l, 1); break;}
+	  select_only(l, when()); break;}
 	return 1;
       } else switch (Fl::event_key()) {
       case FL_Enter:
       case FL_KP_Enter:
-	select_only(l, 1);
+	select_only(l, when());
 	return 1;
       case ' ':
 	selection_ = l;
-	select(l, !item_selected(l), 1);
+	select(l, !item_selected(l), when());
 	return 1;
       case FL_Down:
 	while ((l = item_next(l))) {
 	  if (Fl::event_state(FL_SHIFT|FL_CTRL))
-	    select(l, l1 ? item_selected(l1) : 1, 1);
+	    select(l, l1 ? item_selected(l1) : 1, when());
 	  if (item_height(l)>0) goto J1;
 	}
 	return 1;
       case FL_Up:
 	while ((l = item_prev(l))) {
 	  if (Fl::event_state(FL_SHIFT|FL_CTRL))
-	    select(l, l1 ? item_selected(l1) : 1, 1);
+	    select(l, l1 ? item_selected(l1) : 1, when());
 	  if (item_height(l)>0) goto J1;
 	}
 	return 1;
